--- a/src/style/console.less
+++ b/src/style/console.less
@@ -1,3 +1,4 @@
+// basic
 .output-li{
     margin: 5px 0;
     padding: 5px;
@@ -12,29 +13,6 @@
 }
 .output-li ._count{
     font-size: 0.75em;
-}
-.output-li ._folder{
-    color: #6E6E6E;
-    font-size: 0.75em;
-    display: inline-block;
-    *zoom:1;
-    _display: inline;
-    transition: transform .1s linear;
-    -moz-transition: -moz-transform .1s linear;
-    -o-transition: -o-transform .1s linear;
-    -webkit-transition: -webkit-transform .1s linear;
-    -moz-user-select:none;
-    -webkit-user-select:none;
-    user-select:none;
-}
-._folder-toggle ._folder{
-    transform: rotate(90deg);
-}
-.output-li div._folder-div{
-    display: none;
-}
-._folder-toggle>div._folder-div{
-    display: block;
 }
 .output-li ._public{
     color: #565656;
@@ -57,12 +35,39 @@
 .output-li ._null{
     color: #808080;
 }
-._variable{
+.output-li ._variable{
     color: #660066;
 }
+
+//text select
 .output-li ._timeLine{
     color: #B7B7B7;
     -moz-user-select:none;
     -webkit-user-select:none;
     user-select:none;
+}
+
+// folder
+._folder-triangle{
+  color: #6E6E6E;
+  font-size: 0.75em;
+  display: inline-block;
+  *zoom:1;
+  _display: inline;
+  transition: transform .1s linear;
+  -moz-transition: -moz-transform .1s linear;
+  -o-transition: -o-transform .1s linear;
+  -webkit-transition: -webkit-transform .1s linear;
+  -moz-user-select:none;
+  -webkit-user-select:none;
+  user-select:none;
+}
+._toggle-folder ._folder-triangle{
+  transform: rotate(90deg);
+}
+._folder-div{
+  display: none;
+}
+._toggle-div>div._folder-div{
+  display: block;
 }
