add muilt array & object folder; todo: add Window,htmlElement,Error...

--- a/src/style/console.less
+++ b/src/style/console.less
@@ -36,9 +36,11 @@
     color: #808080;
 }
 .output-li ._variable{
-    color: #660066;
+    color: #881391;
 }
-
+.output-li ._tabs{
+  border-left: 1px dashed #000
+}
 //text select
 .output-li ._timeLine{
     color: #B7B7B7;
